@@ -23,4 +23,4 @@ else
 UUDIRFLAGS = -DUUDIR_PROGRAM=\"$(sbindir)/util/uudir\"
 endif
 
-AM_CFLAGS = -I.. -I$(srcdir)/.. $(WARN_CFLAGS) $(UUDIRFLAGS)
+AM_CFLAGS = -I.. -I$(srcdir)/.. $(WARN_CFLAGS) $(UUDIRFLAGS) -DSBINDIR=\"$(sbindir)\"
